--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,8 @@
     "mariadb": "^3.0.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.21.6"
+    "sequelize": "^6.21.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
