--- a/mms-frontend/package.json
+++ b/mms-frontend/package.json
@@ -7,9 +7,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
     "@line/liff": "2.21.1",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
+    "react-router-dom": "^6.4.0",
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "2.1.0",
